# Inspectre-preprop

./: .dockerignore  .gitignore  AUTHENTICATION_SETUP.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend-only  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  alert_history.json  alerts.json  build-and-run.sh  docker-compose.backend-only.yml  docker-compose.yml  docker-run.sh  env_template.txt  flush.py  motion_recorder.py  pyproject.toml  requirements.txt  run.py  start-native.sh  users.db
4 stream test/: .gitignore  MANUAL_VALIDATION_CHECKLIST.md  README.md  cameras.example.json  ffmpeg-merge-test.py  grid_record_test.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/core/: config.py  connectivity.py  logging_config.py  startup_orchestrator.py  system_state.py
app/services/: alert_service.py  auth_service.py  autopilot_service.py  billing_client.py  chroma_store.py  device_config_service.py  email_service.py  multi_camera_grid_recorder.py  qwen_client.py  r2_uploader.py  storage_manager.py  tunnel_manager.py  user_service.py  video_recorder.py
app/tests/: test_multicam_logic.py  test_setup_flow.py
app/utils/: exceptions.py
frontend/: ELECTRON_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.js  preload.js
frontend/src/: App.tsx  index.css
insp mob/: .gitignore  App.js  README.md  app.json  package-lock.json  package.json
payments/: db.py  main.py  requirements.txt  routes_admin.py  routes_billing.py  schemas.py
payments-admin/: index.html  package.json  vite.config.ts
(+44 files in other folders)
